Added project properties and CardEntity

--- a/CardService/src/main/resources/application.properties
+++ b/CardService/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=CardService
+server.port=8082
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc::/localhost:5432/mp_card_service
+spring.datasource.username=postgres
+spring.datasource.password=postgres
