--- a/CardService/src/main/resources/application.properties
+++ b/CardService/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=CardService
 server.port=8082
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc::/localhost:5432/mp_card_service
+spring.datasource.url=jdbc:postgresql://localhost:5432/mp_card_service
 spring.datasource.username=postgres
 spring.datasource.password=postgres
